# AudioTranscriber

./: .replit  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FASTER_WHISPER_SETUP.md  FINAL_DEPLOYMENT_GUIDE.md  MV1_DEPLOYMENT_GUIDE.md  OPENQM_RECORD_STRUCTURE.md  README.md  app.py  app_redesigned.py  comprehensive-processor_redesigned.js  comprehensive-processor_updated.js  deploy-ui-updates.sh  deploy.sh  deploy_complete.sh  haproxy_speech_config.txt  index_redesigned.html  index_updated.html  models.py  openqm_service.py  pyproject.toml  quick-deploy.sh  replit.md  suggested_prompts (copy).txt  test_ui.html  test_upload.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-class-replit-ui-theme-root-notranslate-translate-no-style-web-1760520188027_1760520188029.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conte-1760520151491_1760520151492.txt  Pasted--QMClient-API-Top-Previous-Next-The-QMClient-API-allows-an-external-application-to-connect-to-a-1760511733731_1760511733732.txt  Pasted--venv-lawr-ubuai-var-www-speech-app-sudo-journalctl-u-speech-app-service-n-30-no-pager-Oct-0-1759917120683_1759917120684.txt  Pasted--venv-lawr-ubuai-var-www-speech-app-sudo-journalctl-u-speech-app-service-n-50-no-pager-Oct-0-1759917036731_1759917036732.txt  Pasted-awr-ubuai-var-www-speech-app-sudo-journalctl-u-speech-app-n-50-no-pager-Oct-15-08-43-04-ubuai-1760517809932_1760517809933.txt  Pasted-global-log-dev-log-local0-log-dev-log-local1-notice-daemon-maxconn-2048-stats--1760586469466_1760586469467.txt  (+13 more)
config/: codex.sqlite3  secret_key
(+31 files in other folders)
